docs(api): thoroughly add javadocs to api