@@ -2,8 +2,11 @@ package io.github.milkdrinkers.milkonomics.api.account;
 
 import io.github.milkdrinkers.milkonomics.api.MilkonomicsAPI;
 import io.github.milkdrinkers.milkonomics.api.denomination.Denomination;
+import org.jetbrains.annotations.*;
+import org.jspecify.annotations.NonNull;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
@@ -11,18 +14,21 @@ import java.util.concurrent.locks.StampedLock;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+/**
+ * Account represents a financial account that can hold balances in multiple denominations.
+ */
 public abstract class Account implements AccountBalance, DenominationBalance {
     private final UUID uuid;
     private final String name;
     private final Map<String, BalanceEntry> balances = new ConcurrentHashMap<>();
 
-    private final StampedLock stateLock = new StampedLock();
-    private boolean acceptingTransactions = true;
+    private final StampedLock stateLock = new StampedLock(); // Lock for misc state
+    private boolean acceptingTransactions;
 
     public Account(
-        UUID uuid,
-        String name,
-        Map<String, BigDecimal> initialBalances,
+        @NotNull UUID uuid,
+        @NotNull String name,
+        @NotNull Map<String, BigDecimal> initialBalances,
         boolean acceptingTransactions
     ) {
         this.uuid = uuid;
@@ -33,75 +39,79 @@ public abstract class Account implements AccountBalance, DenominationBalance {
         this.acceptingTransactions = acceptingTransactions;
     }
 
-    public Account(UUID uuid, String name, BigDecimal initialBalance) {
-        this.uuid = uuid;
-        this.name = name;
-        this.balances.put(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination().id(), new BalanceEntry(initialBalance));
-    }
-
-    public Account(UUID uuid, String name) {
-        this(uuid, name, BigDecimal.ZERO);
-    }
-
-    public UUID getUUID() {
+    /**
+     * Gets the unique identifier of the account.
+     * @return The UUID of the account.
+     */
+    public @NotNull UUID getUUID() {
         return uuid;
     }
 
-    public String getName() {
+    /**
+     * Gets the name of the account.
+     * @return The name of the account.
+     */
+    public @NotNull String getName() {
         return name;
     }
 
-    @Override
-    public BigDecimal get() {
-        return get(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination());
-    }
-
+    /**
+     * Gets all the balances of the account for all denominations. The keys of the map are the denomination id's, and the values are the corresponding balances.
+     * @return A map containing the balances of the account for all denominations.
+     */
+    @NotNull
+    @UnmodifiableView
     public Map<String, BigDecimal> getAllBalances() {
-        return Map.copyOf(balances.entrySet().stream()
+        return Collections.unmodifiableMap(balances.entrySet().stream()
             .map(entry -> Map.entry(entry.getKey(), entry.getValue().balance))
             .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
         );
     }
 
     @Override
-    public boolean set(BigDecimal amount) {
+    public @NonNull BigDecimal get() {
+        return get(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination());
+    }
+
+    @Override
+    public boolean set(@NonNull BigDecimal amount) {
         return set(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination(), amount);
     }
 
     @Override
-    public boolean has(BigDecimal amount) {
+    public boolean has(@NonNull BigDecimal amount) {
         return has(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination(), amount);
     }
 
     @Override
-    public boolean withdraw(BigDecimal amount) {
+    public boolean withdraw(@NonNull BigDecimal amount) {
         return withdraw(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination(), amount);
     }
 
     @Override
-    public boolean deposit(BigDecimal amount) {
+    public boolean deposit(@NonNull BigDecimal amount) {
         return deposit(MilkonomicsAPI.getInstance().getDenominationManager().getDefaultDenomination(), amount);
     }
 
     @Override
-    public BigDecimal get(Denomination denomination) {
+    public @NonNull BigDecimal get(@NonNull Denomination denomination) {
         return getEntry(denomination).read(() -> balances.get(denomination.id()).balance);
     }
 
     @Override
-    public boolean set(Denomination denomination, BigDecimal amount) {
+    public boolean set(@NonNull Denomination denomination, @NonNull BigDecimal amount) {
         getEntry(denomination).writeWith(() -> balances.get(denomination.id()).balance = amount);
         MilkonomicsAPI.getInstance().getAccountSaveHandler().queue(this);
         return true;
     }
 
     @Override
-    public boolean has(Denomination denomination, BigDecimal amount) {
+    public boolean has(@NonNull Denomination denomination, @NonNull BigDecimal amount) {
         return getEntry(denomination).read(() -> balances.get(denomination.id()).balance.compareTo(amount) >= 0);
     }
 
     @Override
-    public boolean withdraw(Denomination denomination, BigDecimal amount) {
+    public boolean withdraw(@NonNull Denomination denomination, @NonNull BigDecimal amount) {
         final boolean ok = getEntry(denomination).writeAndGet(() -> {
             final BalanceEntry entry = balances.get(denomination.id());
             if (entry.balance.compareTo(amount) < 0) return false;
@@ -114,7 +124,7 @@ public abstract class Account implements AccountBalance, DenominationBalance {
     }
 
     @Override
-    public boolean deposit(Denomination denomination, BigDecimal amount) {
+    public boolean deposit(@NonNull Denomination denomination, @NonNull BigDecimal amount) {
         getEntry(denomination).writeWith(() -> {
             final BalanceEntry entry = balances.get(denomination.id());
             entry.balance = entry.balance.add(amount);
@@ -123,15 +133,25 @@ public abstract class Account implements AccountBalance, DenominationBalance {
         return true;
     }
 
+    /**
+     * Gets the BalanceEntry for the specified denomination, creating a new one with the default balance if it does not already exist.
+     * @param denomination The denomination to get the BalanceEntry for.
+     * @return The BalanceEntry for the specified denomination.
+     */
+    @ApiStatus.Internal
     private BalanceEntry getEntry(Denomination denomination) {
-        return balances.computeIfAbsent(denomination.id(), id -> new BalanceEntry(BigDecimal.ZERO));
+        return balances.computeIfAbsent(denomination.id(), id -> new BalanceEntry(denomination.defaultBalance()));
     }
 
+    /**
+     * BalanceEntry is a helper class that encapsulates the balance for a specific denomination and provides thread-safe read and write operations using a StampedLock.
+     */
+    @ApiStatus.Internal
     private static class BalanceEntry {
-        private BigDecimal balance;
-        private final StampedLock lock = new StampedLock();
+        private @NotNull BigDecimal balance;
+        private final @NotNull StampedLock lock = new StampedLock();
 
-        BalanceEntry(BigDecimal initialBalance) {
+        BalanceEntry(@NonNull BigDecimal initialBalance) {
             this.balance = initialBalance;
         }
 
@@ -142,7 +162,8 @@ public abstract class Account implements AccountBalance, DenominationBalance {
          * @param <T>    The type of the value being read.
          * @return The value read by the reader function.
          */
-        <T> T read(Supplier<T> reader) {
+        @NotNull
+        <T> T read(@NotNull Supplier<T> reader) {
             long stamp = lock.tryOptimisticRead();
             T value = reader.get();
 
@@ -163,7 +184,7 @@ public abstract class Account implements AccountBalance, DenominationBalance {
          *
          * @param writer The function to perform the write operation. This should modify the state of the account.
          */
-        void writeWith(Runnable writer) {
+        void writeWith(@NotNull Runnable writer) {
             final long stamp = lock.writeLock();
             try {
                 writer.run();
@@ -179,7 +200,8 @@ public abstract class Account implements AccountBalance, DenominationBalance {
          * @param <T>    The type of the value being returned by the writer function.
          * @return The value returned by the writer function.
          */
-        <T> T writeAndGet(Supplier<T> writer) {
+        @NotNull
+        <T> T writeAndGet(@NotNull Supplier<T> writer) {
             final long stamp = lock.writeLock();
             try {
                 return writer.get();
